@@ -8,4 +8,5 @@
   <include package="karl.tagging"/>
   <include package="karl.adapters"/>
   <include package="karl.cico"/>
+  <include package="karl.evolve"/>
 </configure>
